--- a/publican-fedora/en-US/css/documentation.css
+++ b/publican-fedora/en-US/css/documentation.css
@@ -41,7 +41,7 @@ pre,code,.guibutton,.keycap,.guilabel{font-size:0.9em;font-family:"liberation mo
 .filename,
 .citetitle,
 .replaceable,
-.option{font-weight:bold;}
+.option{}
 .command .replaceable{color:#555;}
 pre{display:block;background-color:#f7f2d0;color:#333;overflow:auto;}
 code{white-space:nowrap;}
