update for website  display
git-svn-id: file:///srv/svn/publican/trunk@160 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-fedora/en-US/css/default.css
+++ b/publican-fedora/en-US/css/default.css
@@ -8,9 +8,9 @@ body{
 	max-width:55em;
 	padding:0em 2em;
 	color:#373737;
-	line-height:150%;
-	margin-left: 300px !important;}
+	line-height:150%;}
 
+body.toc_embeded {margin-left: 300px !important;} /*jeff rocks*/
 
 iframe.toc{ /*for hosting system only*/
 	border-style:none;
@@ -20,7 +20,6 @@ iframe.toc{ /*for hosting system only*/
 	z-index: 100;
 	border-style:none;
 	border-right:1px solid #999 !important;}
-
 
 /*Links*/
 a:link{color:#0066cc;}
