--- a/publican-jboss/en-US/css/default.css
+++ b/publican-jboss/en-US/css/default.css
@@ -4,6 +4,7 @@
 
 @import url("dirty.css");
 
+
 body{
 	background-color: white;
 	margin:0 auto;
@@ -14,7 +15,16 @@ body{
 	color:#333;
 	line-height:150%;
 	}
+body.toc_embeded {margin-left: 300px !important;} /*jeff rocks*/
 
+iframe.toc{ /*for hosting system only*/
+	border-style:none;
+	position:fixed;
+	width:290px;height:99.99%;
+	top:0; left:0; 
+	z-index: 100;
+	border-style:none;
+	border-right:1px solid #999 !important;}
 /*Links*/
 a:link{color:#0066cc;}
 a:visited{color:#6699cc;}
