--- a/publican/content/common/en-US/css/default.css
+++ b/publican/content/common/en-US/css/default.css
@@ -15,6 +15,19 @@ body{
 	line-height:150%;
 	}
 
+
+body.toc_embeded {margin-left: 300px !important;} /*jeff rocks*/
+
+iframe.toc{ /*for hosting system only*/
+	border-style:none;
+	position:fixed;
+	width:290px;height:99.99%;
+	top:0; left:0; 
+	z-index: 100;
+	border-style:none;
+	border-right:1px solid #999 !important;}
+
+
 /*Links*/
 a:link{color:#3465a4;}
 a:visited{color:#729fcf;}
