--- a/publican-redhat/en-US/css/default.css
+++ b/publican-redhat/en-US/css/default.css
@@ -4,6 +4,18 @@
 
 @import url("dirty.css");
 
+
+body.toc_embeded {margin-left: 300px !important;} /*jeff rocks*/
+
+iframe.toc{ /*for hosting system only*/
+	border-style:none;
+	position:fixed;
+	width:290px;height:99.99%;
+	top:0; left:0; 
+	z-index: 100;
+	border-style:none;
+	border-right:1px solid #999 !important;}
+
 body{
 	background-color: white;
 	margin:0 auto;
