updated revision history display
git-svn-id: file:///srv/svn/publican/trunk@161 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-redhat/en-US/css/default.css
+++ b/publican-redhat/en-US/css/default.css
@@ -103,3 +103,99 @@ a.version:focus, a.version:hover{color:black;}
 .products li a{width:300px; padding:.5em 0em;}
 .products ul{clear:both;}
 
+
+/*revision history*/
+.revhistory {
+	display:block;
+	/*max-height:15em;
+	overflow:auto;
+	*/}
+
+
+
+.revhistory table{
+	background-color:transparent;
+	color:#ccc;
+	border-color:#fff;
+	padding:0em;
+	margin: 0;
+	font-size:0.8em;
+	border-collapse:collapse; border-style:none;}
+
+.revhistory td{
+	text-align:right;
+	padding:0em !important;
+	border-top: 1px solid #fff !important;
+	line-height:1.25em;}
+
+
+.revhistory tr td:first-child{
+	text-align:left;}
+
+.revhistory tr td p{
+	text-align:left;
+	font-weight:bold;
+	color:#666;
+	font-size:1.0em;
+	display:block;
+	margin:0em;
+	padding:0em;
+	padding-bottom:0.7em;
+	border-bottom:1px solid #eee;}
+
+.revhistory table th{
+	background-color:transparent;
+	color:#555;
+	font-size:2em;
+	line-height:2em;
+	padding:0em 0em;
+	padding-top:1em;
+	border-bottom:1px solid #eee;}
+
+
+/*credits*/
+.authorgroup div{
+	clear:both}
+h3.author{margin:0em; padding:0em; padding-top:1em;}
+
+
+.authorgroup h4{
+	padding:0em;
+	margin:0em;
+	padding-top:1em;}
+
+
+.author,
+.editor,
+.translator,
+.othercredit{
+	display:block;}
+
+.othercredit h3{
+	padding-top:1em;}
+
+
+div.othercredit{
+	font-size:0.85em;}
+
+.othercredit{
+	margin:0em;
+	padding:0em;
+	line-height: 1.1em;}
+
+.releaseinfo{
+	clear: both;}
+
+.editor{
+	font-size:1.05em;}
+
+h4.editedby{
+	font-size:0.85em;
+	color:#666;
+	font-weight:normal}
+
+
+/*copyright release info*/
+.copyright{
+	font-size:.85em;}
+
