switch from iframe to object for web site, xhtml strict validation
git-svn-id: file:///srv/svn/publican/trunk@189 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-jboss/en-US/css/default.css
+++ b/publican-jboss/en-US/css/default.css
@@ -4,19 +4,6 @@
 
 @import url("dirty.css");
 
-
-body.toc_embeded {margin-left: 300px !important;} /*jeff rocks*/
-
-iframe.toc{ /*for hosting system only*/
-	border-style:none;
-	position:fixed;
-	width:290px;height:99.99%;
-	top:0; left:0; 
-	z-index: 100;
-	border-style:none;
-	border-right:1px solid #999 !important;}
-
-
 body{
 	background-color: white;
 	margin:0 auto;
@@ -29,7 +16,7 @@ body{
 	}
 body.toc_embeded {margin-left: 300px !important;} /*jeff rocks*/
 
-iframe.toc{ /*for hosting system only*/
+object.toc{ /*for hosting system only*/
 	border-style:none;
 	position:fixed;
 	width:290px;height:99.99%;
@@ -41,7 +28,6 @@ iframe.toc{ /*for hosting system only*/
 a:link{color:#0066cc;}
 a:visited{color:#6699cc;}
 div.longdesc-link{float:right;color:#999;}
-
 
 /*headings*/
 h1,h2,h3,h4,h5,h6{color:#a7a700;
