--- a/publican-redhat/en-US/css/default.css
+++ b/publican-redhat/en-US/css/default.css
@@ -7,7 +7,7 @@
 
 body.toc_embeded {margin-left: 300px !important;} /*jeff rocks*/
 
-iframe.toc{ /*for hosting system only*/
+object.toc{ /*for hosting system only*/
 	border-style:none;
 	position:fixed;
 	width:290px;height:99.99%;
