--- a/publican/content/common/en-US/css/default.css
+++ b/publican/content/common/en-US/css/default.css
@@ -18,7 +18,7 @@ body{
 
 body.toc_embeded {margin-left: 300px !important;} /*jeff rocks*/
 
-iframe.toc{ /*for hosting system only*/
+object.toc{ /*for hosting system only*/
 	border-style:none;
 	position:fixed;
 	width:290px;height:99.99%;
