Add desktop css customisations
git-svn-id: file:///srv/svn/publican/trunk@207 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-fedora/en-US/css/default.css
+++ b/publican-fedora/en-US/css/default.css
@@ -21,6 +21,28 @@ object.toc{ /*for hosting system only*/
 	border-style:none;
 	border-right:1px solid #999 !important;}
 
+
+/* desktop styles */
+body.desktop .book > .toc {
+	display:block;
+	width:24em;
+	height:99%;
+	position:fixed;
+	overflow:auto;
+	top:0px;
+	left:0px; 
+	padding-left:10px;
+	font-size:0.8em;
+	background-color:#EEEEEE;
+}
+body.desktop {
+	margin-left:24em;
+}
+.toc dt {
+	line-height:1.2em;
+	margin-bottom:.7em;
+}
+
 /*Links*/
 a:link{color:#0066cc;}
 a:hover, a:active{color:#003366;}
