--- a/publican-jboss/en-US/css/default.css
+++ b/publican-jboss/en-US/css/default.css
@@ -99,3 +99,24 @@ a.version:focus, a.version:hover{color:black;}
 .products li a{width:300px; padding:.5em 0em;}
 .products ul{clear:both;}
 
+/* desktop styles */
+body.desktop .book > .toc {
+	display:block;
+	width:24em;
+	height:99%;
+	position:fixed;
+	overflow:auto;
+	top:0px;
+	left:0px; 
+	padding-left:10px;
+	font-size:0.8em;
+	background-color:#EEEEEE;
+}
+body.desktop {
+	margin-left:24em;
+}
+.toc dt {
+	line-height:1.2em;
+	margin-bottom:.7em;
+}
+
