--- a/publican-redhat/en-US/css/default.css
+++ b/publican-redhat/en-US/css/default.css
@@ -27,6 +27,27 @@ body{
 	line-height:150%;
 	}
 
+/* desktop styles */
+body.desktop .book > .toc {
+	display:block;
+	width:24em;
+	height:99%;
+	position:fixed;
+	overflow:auto;
+	top:0px;
+	left:0px; 
+	padding-left:10px;
+	font-size:0.8em;
+	background-color:#EEEEEE;
+}
+body.desktop {
+	margin-left:24em;
+}
+.toc dt {
+	line-height:1.2em;
+	margin-bottom:.7em;
+}
+
 /*Links*/
 a:link{color:#0066cc;}
 a:visited{color:#6699cc;}
