fix missing list admonitions in hltm-single article
git-svn-id: file:///srv/svn/publican/trunk@213 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-fedora/en-US/css/default.css
+++ b/publican-fedora/en-US/css/default.css
@@ -130,12 +130,8 @@ ul.languages{
 	background-color:#eee;
 	padding:.5em;}
 
-
-.article ul,
-.article li{
-	margin:0em;
-	padding:0em;
-	list-style:none;}
+.article ul { margin:0em; padding-left:2em !important; }
+.article li { margin:0em; padding-left:0em !important; list-style: disc !important; }
 
 .books{
 	position:relative;}
