--- a/publican-jboss/en-US/css/default.css
+++ b/publican-jboss/en-US/css/default.css
@@ -76,7 +76,8 @@ ul.languages{display:block; background-color:#eee;padding:.5em;}
 /*supporting stylesheets*/
 
 /*unique to the webpage only*/
-.article ul, .article li{margin:0em; padding:0em;list-style:none;}
+.article ul { margin:0em; padding-left:2em !important; }
+.article li { margin:0em; padding-left:0em !important; list-style: disc !important; }
 .books{position:relative;}
 
 
