QANDA set css fix BZ #442674
git-svn-id: file:///srv/svn/publican/trunk@214 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-fedora/en-US/css/default.css
+++ b/publican-fedora/en-US/css/default.css
@@ -935,3 +935,26 @@ h4.editedby{
 	background-color:#ccc;}
 
 
+/* qanda sets */
+.answer {
+	padding-bottom:1em;
+	border-bottom:1px dotted #ccc;
+}
+
+.qandaset .toc{
+	border-bottom:1px dotted #ccc; 
+}
+
+.question {
+	font-weight:bold;
+}
+
+.answer .data, .question .data {
+	padding-left: 2.6em;
+}
+
+.answer label, .question label {
+	float:left;
+	font-weight:bold; 
+}
+
