--- a/publican-jboss/en-US/css/default.css
+++ b/publican-jboss/en-US/css/default.css
@@ -121,3 +121,26 @@ body.desktop {
 	margin-bottom:.7em;
 }
 
+/* qanda sets */
+.answer {
+	padding-bottom:1em;
+	border-bottom:1px dotted #ccc;
+}
+
+.qandaset .toc{
+	border-bottom:1px dotted #ccc; 
+}
+
+.question {
+	font-weight:bold;
+}
+
+.answer .data, .question .data {
+	padding-left: 2.6em;
+}
+
+.answer label, .question label {
+	float:left;
+	font-weight:bold; 
+}
+
