--- a/publican/content/common/en-US/css/documentation.css
+++ b/publican/content/common/en-US/css/documentation.css
@@ -41,7 +41,9 @@ pre,code,.guibutton,.keycap,.guilabel{font-size:0.9em;font-family:"liberation mo
 .filename,
 .citetitle,
 .replaceable,
-.option{}
+.option {
+	font-family:monospace !important;
+}
 .command .replaceable{color:#555;}
 pre{display:block;background-color:#e8e3d9;color:#000;overflow:auto;padding:.5em;font-size:.85em;}
 code{white-space:nowrap;}
