--- a/publican-redhat/en-US/css/documentation.css
+++ b/publican-redhat/en-US/css/documentation.css
@@ -41,7 +41,9 @@ pre,code,.guibutton,.keycap,.guilabel{font-size:0.9em;font-family:"liberation mo
 .filename,
 .citetitle,
 .replaceable,
-.option{}
+.option{
+	font-family:monospace !important;
+}
 .command .replaceable{color:#555;}
 pre{display:block;background-color:#f7f2d0;color:#333;overflow:auto;}
 code{white-space:nowrap;}
