--- a/publican-ovirt/en-US/css/documentation.css
+++ b/publican-ovirt/en-US/css/documentation.css
@@ -106,7 +106,7 @@ div.important h2{background-image:url(../images/important.png)}
 /*Page Title*/
 #title strong{display:none;}
 #title a{display:block;height:45px;width:110px;padding-left:200px;background:transparent url(../images/title_logo.png) top left no-repeat;}
-#title{display:block;height:45px;background:transparent url(../images/documentation.png) top right no-repeat;padding-bottom:1em;}
+#title{display:block;height:45px;background:transparent url(../images/title_bg.png) top left repeat-x;padding-bottom:1em;}
 
 /*Table*/
 table{border:1px solid #aaa;width:100%;border-collapse:collapse;}
