--- a/publican-ovirt/en-US/css/default.css
+++ b/publican-ovirt/en-US/css/default.css
@@ -17,8 +17,8 @@ object.toc{ /*for hosting system only*/
 	border-right:1px solid #999 !important;}
 
 body{
-	background-color: white;
-	margin:0 auto;
+	background: white url(../images/title_bg.png) top left repeat-x;
+	margin:0 ;
 	font-family: "liberation sans", "Myriad ", "Bitstream Vera Sans","Lucida Grande", verdana, "Luxi Sans","Trebuchet MS", helvetica,verdana,arial,sans-serif;
 	font-size:12px;
 	max-width:55em;
@@ -49,39 +49,40 @@ body.desktop {
 }
 
 /*Links*/
-a:link{color:#0066cc;}
-a:visited{color:#6699cc;}
+a:link{color:#5f8c00;}
+a:visited{color:#5f8c00;}
 div.longdesc-link{float:right;color:#999;}
 
 
 /*headings*/
-h1,h2,h3,h4,h5,h6{color:#a70000;
+h1,h2,h3,h4,h5,h6{color:#000;
 	line-height:130%;
 	margin-top:0em;
 	font-family:"liberation sans","Bitstream Vera Sans","Lucida Grande","Trebuchet MS",helvetica,verdana,arial,sans-serif;
 	background-color:transparent;
+	font-weight:normal;
 	}
 
-h1{background: #800 url(../images/h1-bg.png) top left repeat;
-	line-height:1.2em;
-	color:white;
-	font-size:2em;
-	padding:1.5em;
+h1{color:#555;
+	line-height:1.3em;
+border-bottom: 1px solid #ccc;
+	font-size:3.5em;
+
 	}
 
-h2{font-size:1.6em;
+h2{font-size:1.8em;
 	}
 
-h3{font-size:1.3em;
+h3{font-size:1.5em;
 	padding-top:0em;
 	padding-bottom:0em;
 	}
-h4{font-size:1.1em;
+h4{font-size:1.3em;
 	padding-top:0em;
 	padding-bottom:0em;
 	}
 
-h5.formalpara {font-size:1em;
+h5.formalpara {font-size:1.1em; font-weight:bold !important;
 	margin-top:2em;margin-bottom:.8em;
 	}
 
