--- a/publican-ovirt/en-US/css/docnav.css
+++ b/publican-ovirt/en-US/css/docnav.css
@@ -1,6 +1,12 @@
 /*document navigation*/
+
+/*icons by the tango project
+ http://tango.freedesktop.org/Tango_Desktop_Project
+
+licensed CC Attribution Share alike  */
+
 .docnav a, .docnav strong{text-decoration:none;font-weight:normal;}
-.docnav{list-style:none;margin:0em;padding:0em;position:relative;width:100%;padding-bottom:2em;padding-top:1em;border-top:1px dotted #ccc;}
+.docnav{list-style:none;margin:0em;padding:0em;position:relative;width:100%;padding-bottom:4em;padding-top:1em;}
 .docnav li{list-style:none;margin:0em;padding:0em;display:inline;font-size:.8em;}
 .docnav li:before{content:" ";}
 .docnav li.previous, .docnav li.next{position:absolute;top:1em;}
