--- a/publican-ovirt/en-US/css/documentation.css
+++ b/publican-ovirt/en-US/css/documentation.css
@@ -23,11 +23,11 @@ img{display:block;margin:2em 0;}
 
 dt a{font-weight: normal;}
 .longdesc-link{display:none;}
-.prompt{background-color:#ede7c8;padding:0em .3em;}
+.prompt{background-color:#d3e1b7;padding:0em .3em;}
 
 /*user interface styles*/
 .screen .replaceable {color:#444;}
-.screen{background-color:#ede7c8;color:#333;padding:.5em 1em;margin:0em;}
+.screen{background-color:#d3e1b7;color:#333;padding:.5em 1em;margin:0em;}
 pre,code,.guibutton,.keycap,.guilabel{font-size:0.9em;font-family:"liberation mono", "Bitstream vera mono",monospace;}
 .guibutton,.keycap,.guilabel{font-weight:bold;white-space:nowrap;color:#444;font-family:"liberation sans", "Bitstream vera sans", "dejavu sans" sans-serif;}
 .guibutton,.guilabel{}
@@ -50,10 +50,10 @@ code{white-space:nowrap;}
 
 /*Notifications*/
 div.note,div.tip ,div.important ,div.caution ,div.warning{
-	background: #555753; color:white;padding:1em;padding-bottom:20px;border:1px solid #444;margin-bottom:1.5em;background-repeat:no-repeat; background-position:10px 10px;
+	background: #73962c; color:white;padding:1em;padding-bottom:20px;border:1px solid #577917;margin-bottom:1.5em;background-repeat:no-repeat; background-position:10px 10px;
 }
 
-div.note pre,div.tip pre ,div.important pre ,div.caution pre ,div.warning pre{background-color:#333; color:white;}
+div.note pre,div.tip pre ,div.important pre ,div.caution pre ,div.warning pre{background-color:#5f8c00; color:white;}
 div.note,div.tip ,div.important ,div.caution ,div.warning{margin-top:.5em;}
 div.note{background-image:url(../images/note.png)}
 div.tip{background-image:url(../images/tip.png)}
@@ -72,7 +72,7 @@ div.note h2,div.tip h2,div.important h2,div.caution h2,div.warning h2{height:32p
 div.note .guilabel,div.tip .guilabel,div.important .guilabel,div.caution .guilabel,div.warning .guilabel{color:white !important;}
 /*
 div.note h2,div.tip h2,div.important h2,div.caution h2,div.warning h2{
-	background-color:transparent;background-position:top left;background-repeat:no-repeat;height:48px;font-size:1.3em;color:#ede7c8;
+	background-color:transparent;background-position:top left;background-repeat:no-repeat;height:48px;font-size:1.3em;color:#d3e1b7;
 	}
 	*/
 
@@ -105,8 +105,8 @@ div.important h2{background-image:url(../images/important.png)}
 */
 /*Page Title*/
 #title strong{display:none;}
-#title a{display:block;height:45px;width:110px;padding-left:200px;background:transparent url(../images/title_logo.png) top left no-repeat;}
-#title{display:block;height:45px;background:transparent url(../images/title_bg.png) top left repeat-x;padding-bottom:1em;}
+#title a{ position:absolute; top:0; left: 0;display:block;height:110px;width:110px;padding-left:200px;background:transparent url(../images/title_logo.png) top left no-repeat;}
+#title{margin:0;display:block;height:85px;background:transparent url(../images/title_bg.png) top left repeat-x;padding-bottom:1em;}
 
 /*Table*/
 table{border:1px solid #aaa;width:100%;border-collapse:collapse;}
