--- a/publican/content/common/en-US/css/dirty.css
+++ b/publican/content/common/en-US/css/dirty.css
@@ -1,3 +1,5 @@
-pre{-moz-border-radius:11px;}
-.example{-moz-border-radius:15px;}
-/*div.note,div.tip ,div.important ,div.caution ,div.warning{-moz-border-radius:11px;}*/
+pre{-moz-border-radius:.5em;}
+.example{-moz-border-radius:.5em;}
+div.example-contents{-moz-border-radius:.3em;}
+div.note,div.tip ,div.important ,div.caution ,div.warning{-moz-border-radius:.5em}
+
