--- a/publican/content/common/en-US/css/default.css
+++ b/publican/content/common/en-US/css/default.css
@@ -1,7 +1,3 @@
-@import url("documentation.css");
-@import url("docnav.css");
-@import url("reports.css");
-
 @import url("dirty.css");
 
 body{
@@ -17,7 +13,6 @@ body{
 
 
 body.toc_embeded {margin-left: 300px !important;} /*jeff rocks*/
-
 object.toc{ /*for hosting system only*/
 	border-style:none;
 	position:fixed;
@@ -49,33 +44,37 @@ body.desktop {
 }
 
 /*Links*/
-a:link{color:#3465a4;}
-a:visited{color:#729fcf;}
+a:link{color:#3366cc;}
+a:visited{color:#003366;}
 div.longdesc-link{float:right;color:#999;}
 
 
 /*headings*/
-h1,h2,h3,h4,h5,h6{color:#554931;
+h1,h2,h3,h4,h5,h6{	color:#336699;
 	line-height:130%;
 	margin-top:0em;
 	font-family:"liberation sans","Bitstream Vera Sans","Lucida Grande","Trebuchet MS",helvetica,verdana,arial,sans-serif;
 	background-color:transparent;
 	}
 
-h1{background: #6c614b url(../images/h1-bg.png) top left repeat-x;
-	line-height:1.2em;
-	color:white;
-	font-size:2em;
-	padding:1.5em;
+.titlepage div div  {margin:0em; padding:0em;}
+.subtitle{font-weight:normal;}
+.subtitle i{font-style:normal;}
+h1{	font-weight:normal;
+	font-size:3em;
+margin-bottom:.25em;
+
 	}
 
-h2{font-size:1.6em;
+h2{font-size:1.6em; 
 	}
 
 h3{font-size:1.3em;
 	padding-top:0em;
 	padding-bottom:0em;
 	}
+
+h3.corpauthor{color:#555;font-size:1em;}
 h4{font-size:1.1em;
 	padding-top:0em;
 	padding-bottom:0em;
@@ -175,8 +174,11 @@ a.version:focus, a.version:hover{color:black;}
 
 
 /*credits*/
+
+
+
 .authorgroup div{
-	clear:both}
+	clear:both; }
 h3.author{margin:0em; padding:0em; padding-top:1em;}
 
 
@@ -246,4 +248,276 @@ h4.editedby{
 .package{
 	font-style:italic;
 }
+
+
+
+img{margin:0em; pading:0em;display:inline;}
+td{vertical-align:top;}
+
+/*Lists*/
+ol li ,ul li{padding-left:.2em;padding-bottom:.5em;margin:0em;}
+
+ul{padding-left:1.6em;list-style-image:url(../images/dot.png);list-style-type: circle;}
+ul ul{list-style-image:url(../images/dot2.png);list-style-type: circle;}
+dt {font-weight:bold;margin-bottom:0em;padding-bottom:0em;}
+dd{margin:0em;margin-left:2em;padding-top:0em;}
+li p:first-child, dd p:first-child{padding:0em;margin-top:.3em;}
+.variablelist,.itemizedlist{margin-top:.6em;}
+ul li p:first-child{margin:0em;}
+/*images*/
+img{display:block;margin:2em 0;}
+.inlinemediaobject,.inlinemediaobject img{display:inline !important;margin:0em;}
+
+.figure img{display:block; margin:0;}
+.figure .title{margin:0em; margin-bottom:2em !important; padding:0px;}
+
+/*document modes*/
+.confidential{background-color:#900; color:White; padding:.5em .5em; font-family:serif; text-transform:uppercase; text-align:center}
+
+dt a{font-weight: normal;}
+.prompt{;padding:0em .3em;}
+
+/*user interface styles*/
+.screen .replaceable {color:#444;}
+pre,code,.guibutton,.keycap,.guilabel{font-size:0.9em;font-family:"liberation mono", "Bitstream vera mono",monospace;}
+.guibutton,.keycap,.guilabel{font-weight:bold;white-space:nowrap;color:#444;font-family:"liberation sans", "Bitstream vera sans", "dejavu sans" sans-serif;}
+.guibutton,.guilabel{}
+.keycap{padding: .1em .4em;}
+
+
+.example {background-color:#dc9f2e; padding:.25em; margin-bottom:10px;}
+.example h6{color:#fff; margin: .5em ;  font-weight: bold;}
+.example-contents{background-color:white; margin:0em; padding: .5em;}
+
+
+
+
+.abstract {border: .25em solid #ccc; border-style: solid none;}
+.abstract h6{display:none;}
+.abstract p{background-color:white; color:black; margin:0em; padding: 1.5em 2em;}
+
+
+div.abstract{font-size:1.3em; line-height:1.5em;}
+
+/*terminal/console text*/
+.command,
+.computeroutput,
+.filename,
+.citetitle,
+.replaceable,
+.option {
+	font-family:monospace !important;
+}
+.command .replaceable{color:#555;}
+pre{display:block;background-color:#ddd;color:#000;overflow:auto;padding:.5em 1em;font-size:.85em;}
+code{white-space:nowrap;}
+
+/*Notifications*/
+
+div.note,div.tip ,div.important ,div.caution ,div.warning{padding:1em 1em; margin-bottom:1em; background-repeat:no-repeat;background-position:1em 1em; }
+div.note {background-color:#bfdce8; color:#003d6e;}
+div.tip  {background-color:#8e9f00; color:white;}
+div.important  {background-color:#56585a; color:white;}
+div.caution  {background-color:#d08e13; color:white;}
+div.warning {background-color:#9e292b; color:white;}
+
+
+div.note h2{color:#003d6e;}
+div.tip h2{color:white;}
+div.important h2{color:#fff;}
+div.caution h2{color:white;}
+div.warning h2{color:white;}
+
+div.note h2,div.tip h2,div.important h2,div.caution h2,div.warning h2{height:32px;font-size:1.3em; }
+
+div.note pre,div.tip pre ,div.important pre ,div.caution pre ,div.warning pre{background-color:#333333; color:white;}
+
+
+
+div.note,div.tip ,div.important ,div.caution ,div.warning{margin-top:.5em;}
+div.note{background-image:url(../images/note.png)}
+div.tip{background-image:url(../images/tip.png)}
+div.important{background-image:url(../images/important.png)}
+div.caution{background-image:url(../images/caution.png)}
+div.warning{background-image:url(../images/warning.png)}
+
+
+
+
+div.note .replaceable,div.tip .replaceable,div.important .replaceable,div.caution .replaceable,div.warning .replaceable{
+	color:#e3dcc0;
+	}
+
+pre .replaceable, tt .replaceable{
+	color:#444 !important;
+	}	
+
+
+div.note .guilabel,div.tip .guilabel,div.important .guilabel,div.caution .guilabel,div.warning .guilabel{color:white !important;}
+/*
+div.note h2,div.tip h2,div.important h2,div.caution h2,div.warning h2{
+	background-color:transparent;background-position:top left;background-repeat:no-repeat;height:48px;font-size:1.3em;color:#ede7c8;
+	}
+	*/
+
+div.note li,div.tip li,div.caution li,div.warning li,div.important li{
+	padding-left:10px;margin:0em;
+	}
+	
+div.note ul,div.tip ul,div.caution ul,div.warning ul,div.important ul{
+	padding-left:40px;margin:0em;
+	}
+
+div.note pre pre a:visited,div.tip pre pre a:visited,div.important pre pre a:visited,
+div.caution pre pre a:visited,div.warning pre pre a:visited,div.note pre a:link,
+.tip pre a:link,div.important pre a:link,div.caution pre a:link,div.warning pre a:link{
+	color:#0066cc !important;
+	}
+
+div.note a:visited,div.tip a:visited ,div.important a:visited ,div.caution a:visited ,
+div.warning a:visited,div.note a:link ,div.tip a:link ,div.important a:link ,div.caution a:link ,div.warning a:link{
+	color:#f7f2d0;
+	}
+
+/*notification icons*/
+div.note h2,div.note p,div.tip h2,div.tip p,div.caution h2,div.caution p,div.warning h2,div.warning p,div.important h2,.important p {padding:0em;margin:0em;padding-left:56px;}
+/*div.note h2{background-image:url(../images/note.png)}
+div.tip h2{background-image:url(../images/tip.png)}
+div.caution h2{background-image:url(../images/caution.png)}
+div.warning h2{background-image:url(../images/warning.png)}
+div.important h2{background-image:url(../images/important.png)}
+*/
+/*Page Title*/
+#title strong{display:none;}
+#title a{display:block;height:45px;width:110px;padding-left:200px;background:transparent url(../images/image_left.png) top left no-repeat; }
+#title{display:block;height:45px;background:transparent url(../images/image_right.png) top right no-repeat;padding-bottom:0em;margin-bottom:0em;}
+
+/*Table*/
+table{border:1px solid #6c614b;width:100%;border-collapse:collapse;}
+table th{text-align:left;background-color:#6699cc;padding:.3em .5em;color:white;}
+table td{padding:.15em .5em;}
+table tr.even td{background-color:#f5f5f5;}
+table th p:first-child,table td p:first-child,table  li p:first-child{margin-top:0em;padding-top:0em;display:inline;}
+
+th, td{border-style:none;;}
+table table td{border-bottom:1px dotted #aaa !important;background-color:white;padding:.6em 0em;}
+table table{border:1px solid white !important;font-size:.9em;}
+
+
+td.remarkval{font-size:.9em;color:#444;}
+.defaultval{font-size:.8em}
+td.typeval{font-size:.8em}
+
+td.fieldval{font-weight:bold; font-size:.9em;}
+
+th.dbkey{font-size:.9em;}
+
+.lbname,.lbtype,.lbdescr,.lbdriver,.lbhost{color:white;font-weight:bold;background-color:#999;font-size:0.9em;width:120px;}
+td.remarkval{width:230px;}
+
+td.tname{font-weight:bold;font-size:1.1em;}
+h5{font-size:9.5pt;}
+h6{font-size:9pt;}
+th.dbfield{width:120px;}
+th.dbtype{width:70px;}
+th.dbdefault{width:70px;}
+th.dbnul{width:70px;}
+th.dbkey{width:70px;}
+
+span.book{margin-top:4em;display:block;}
+span.chapter{display:block;margin-top:0.5em;}
+
+/*Breadcrumbs*/
+#breadcrumbs ul li.first:before{content:" ";}
+#breadcrumbs{color:#900;padding:3px;margin-bottom:25px;}
+#breadcrumbs ul{margin-left:0;padding-left:0;display:inline;border:none;}
+#breadcrumbs ul li{margin-left:0;padding-left:2px;border:none;list-style:none;display:inline;}
+#breadcrumbs ul li:before{content:"\0020 \0020 \0020 \00BB \0020";color:#333;}
+
+/*status*/
+.alpha1{background: white url(../images/watermark-alpha1.png) top left repeat;}
+.alpha2{background: white url(../images/watermark-alpha2.png) top left repeat;}
+.beta1{background: white url(../images/watermark-beta1.png) top left repeat;}
+.beta2{background: white url(../images/watermark-beta2.png) top left repeat;}
+.pre-release-candidate{background: white url(../images/watermark-pre-release-candidate.png) top left repeat;}
+.release-candidate{background: white url(../images/watermark-release-candidate.png) top left repeat;}
+
+/*index*/
+.glossary h3,
+.index h3{font-size: 2em;color:#aaa;margin:0em;}
+.indexdiv{margin-bottom:1em;}
+.glossary dt,.index dt{font-size:.9em;color:#444;padding-top:.5em;}
+.glossary dl dl dt,
+.index dl dl dt{font-size:.85em;color:#777;line-height:1.2em;font-weight:normal;padding-top:0em;}
+.index dl dl dt:before{content:"- ";color:#ccc;}
+
+/*changes*/
+.footnotes{}
+.footnote {padding:.2em 1em;background-color:#c8c5ac;font-size: .9em;margin:0em;margin-bottom:.5em;color:#222;}
+table .footnote{margin:1em .5em;}
+sup{padding:0em .3em;padding-left:0em;}
+.footnote{position:relative;}
+.footnote sup  {color:#e3dcc0;font-size:1.8em;position:absolute;left: .4em;}
+.footnote sup a:link,
+.footnote sup a:visited{color:#92917d;text-decoration:none;}
+.footnote:hover sup a{color:#fff;text-decoration:none;}
+.footnote p{padding-left:5em;}
+.footnote a:link,
+.footnote a:visited{color:#00537c;}
+.footnote a:hover{color:white;}
+
+li p:first-child{margin:0em !important; padding:0em !important;}
+
+/**/
+div.chapter, div.section {padding-top:2em;}
+
+.revhistory{font-size:}
+
+pre .replaceable, 
+pre .keycap{color:white;}
+pre{font-family:"liberation mono", "bitstream vera mono", "dejavu mono" monospace;}
+
+div.note .replaceable,
+div.tip  .replaceable,
+div.important .replaceable,
+div.caution  .replaceable,
+div.warning .replaceable,
+div.note .keycap,
+div.tip  .keycap,
+div.important .keycap,
+div.caution  .keycap,
+div.warning .keycap
+{color:white;}
+
+
+.authorgroup {}
+.authorgroup h4{padding:0em; margin:0em;margin-top:1em;}
+.author, .editor, .translator, .othercredit{display:block;}
+
+ul li p:last-child{margin-bottom:0em; padding-bottom:0em;}
+
+
+/*document navigation*/
+.docnav{list-style:none;margin:0em;padding:0em;position:relative;width:100%;padding-bottom:2em;padding-top:1em;}
+.docnav{margin:0 auto;text-align:center;}
+.docnav a, .docnav strong{text-decoration:none;font-weight:normal;}
+
+.docnav li{list-style:none;margin:0em;padding:0em;display:inline;font-size:.8em;}
+.docnav li:before{content:" ";}
+.docnav li.previous, .docnav li.next{position:absolute;top:1em;}
+.docnav li.up, .docnav li.home{margin:0em 1.5em;}
+.docnav li.previous{left:0px;text-align:left;}
+.docnav li.next{right:0px;text-align:right;}
+.docnav li.previous strong, .docnav li.next strong{display:block;height:22px;}
+.docnav li.next a strong{background:  url(../images/stock-go-forward.png) top right no-repeat;padding-top:3px;padding-right:28px;font-size:1.2em;}
+.docnav li.previous a strong{background: url(../images/stock-go-back.png) top left no-repeat;padding-top:3px;padding-left:28px;font-size:1.2em;}
+.docnav li.home a strong{background: url(../images/stock-home.png) top left no-repeat;padding:5px;padding-left:28px;font-size:1.2em;}
+.docnav li.up a strong{background: url(../images/stock-go-up.png) top left no-repeat;padding:5px;padding-left:28px;font-size:1.2em;}
+
+.docnav a:link, .docnav a:visited {color:#666 !important;}
+.docnav a:hover,.docnav a:focus, .docnav a:active{color:black !important;}
+.docnav a{max-width: 10em;overflow:hidden;}
+.docnav a:link strong{text-decoration:none;}
+
+.docnav{margin:0 auto;text-align:center;}
 
