TEST saxon & syntax highlighting
git-svn-id: file:///srv/svn/publican/trunk@347 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/content/common/en-US/css/default.css
+++ b/publican/content/common/en-US/css/default.css
@@ -521,3 +521,14 @@ ul li p:last-child{margin-bottom:0em; padding-bottom:0em;}
 
 .docnav{margin:0 auto;text-align:center;}
 
+/* inline syntax highlighting */
+.hl-keyword{ color: red }
+.hl-string{ color: silver }
+.hl-comment{ color: blue }
+.hl-tag{ color: orange }
+.hl-attribute{ color: brown }
+.hl-value{ color: purple }
+.hl-html{ color: yellow }
+.hl-xslt{ color: cyan }
+.hl-section{ color: violet }
+
