--- a/publican/content/common/en-US/css/default.css
+++ b/publican/content/common/en-US/css/default.css
@@ -503,7 +503,7 @@ ul li p:last-child{margin-bottom:0em; padding-bottom:0em;}
 .docnav a, .docnav strong{text-decoration:none;font-weight:normal;}
 
 .docnav li{list-style:none;margin:0em;padding:0em;display:inline;font-size:.8em;}
-.docnav li:before{content:" ";}
+.docnav li:before{content: " " ;}
 .docnav li.previous, .docnav li.next{position:absolute;top:1em;}
 .docnav li.up, .docnav li.home{margin:0em 1.5em;}
 .docnav li.previous{left:0px;text-align:left;}
@@ -522,13 +522,13 @@ ul li p:last-child{margin-bottom:0em; padding-bottom:0em;}
 .docnav{margin:0 auto;text-align:center;}
 
 /* inline syntax highlighting */
-.hl-keyword{ color: red }
-.hl-string{ color: silver }
-.hl-comment{ color: blue }
-.hl-tag{ color: orange }
-.hl-attribute{ color: brown }
+.hl-keyword{ color: blue }
+.hl-string{ color: green }
+.hl-comment{ color: #aaaaaa }
+.hl-tag{ color: blue }
+.hl-attribute{ color: red }
 .hl-value{ color: purple }
-.hl-html{ color: yellow }
-.hl-xslt{ color: cyan }
-.hl-section{ color: violet }
+.hl-html{ color: blue }
+.hl-xslt{ color: green }
+.hl-section{ color: green }
 
