add syntax highlighting
git-svn-id: file:///srv/svn/publican/trunk@349 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-gimp/en-US/css/default.css
+++ b/publican-gimp/en-US/css/default.css
@@ -965,3 +965,14 @@ h4.editedby{
 	font-style:italic;
 }
 
+/* inline syntax highlighting */
+.hl-keyword{ color: #002F5D }
+.hl-string{ color: #00774B }
+.hl-comment{ color: #DAD9AD }
+.hl-tag{ color: #002F5D }
+.hl-attribute{ color: #a70000 }
+.hl-value{ color: #4E376B }
+.hl-html{ color:#002F5D  }
+.hl-xslt{ color: #00774B }
+.hl-section{ color: #00774B }
+
