--- a/publican/content/common/en-US/css/default.css
+++ b/publican/content/common/en-US/css/default.css
@@ -522,13 +522,13 @@ ul li p:last-child{margin-bottom:0em; padding-bottom:0em;}
 .docnav{margin:0 auto;text-align:center;}
 
 /* inline syntax highlighting */
-.hl-keyword{ color: blue }
-.hl-string{ color: green }
-.hl-comment{ color: #aaaaaa }
-.hl-tag{ color: blue }
-.hl-attribute{ color: red }
-.hl-value{ color: purple }
-.hl-html{ color: blue }
-.hl-xslt{ color: green }
-.hl-section{ color: green }
+.hl-keyword{ color: #002F5D }
+.hl-string{ color: #00774B }
+.hl-comment{ color: #DAD9AD }
+.hl-tag{ color: #002F5D }
+.hl-attribute{ color: #a70000 }
+.hl-value{ color: #4E376B }
+.hl-html{ color:#002F5D  }
+.hl-xslt{ color: #00774B }
+.hl-section{ color: #00774B }
 
