--- a/publican-jboss/en-US/css/default.css
+++ b/publican-jboss/en-US/css/default.css
@@ -148,3 +148,14 @@ body.desktop {
 	font-style:italic;
 }
 
+/* inline syntax highlighting */
+.hl-keyword{ color: #002F5D }
+.hl-string{ color: #00774B }
+.hl-comment{ color: #DAD9AD }
+.hl-tag{ color: #002F5D }
+.hl-attribute{ color: #a70000 }
+.hl-value{ color: #4E376B }
+.hl-html{ color:#002F5D  }
+.hl-xslt{ color: #00774B }
+.hl-section{ color: #00774B }
+
