change admonistion and screen colors
git-svn-id: file:///srv/svn/publican/trunk@351 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-redhat/en-US/css/documentation.css
+++ b/publican-redhat/en-US/css/documentation.css
@@ -27,7 +27,7 @@ dt a{font-weight: normal;}
 
 /*user interface styles*/
 .screen .replaceable {color:#444;}
-.screen{background-color:#ede7c8;color:#333;padding:.5em 1em;margin:0em;}
+.screen{background-color:#eeeeee; color:black; padding:.5em 1em; margin:0em;}
 pre,code,.guibutton,.keycap,.guilabel{font-size:0.9em;font-family:"liberation mono", "Bitstream vera mono",monospace;}
 .guibutton,.keycap,.guilabel{font-weight:bold;white-space:nowrap;color:#444;font-family:"liberation sans", "Bitstream vera sans", "dejavu sans" sans-serif;}
 .guibutton,.guilabel{}
@@ -50,7 +50,7 @@ code{white-space:nowrap;}
 
 /*Notifications*/
 div.note,div.tip ,div.important ,div.caution ,div.warning{
-	background: #555753; color:white;padding:1em;padding-bottom:20px;border:1px solid #444;margin-bottom:1.5em;background-repeat:no-repeat; background-position:10px 10px;
+	background: #404040; color:white;padding:1em;padding-bottom:20px;border:1px solid #444;margin-bottom:1.5em;background-repeat:no-repeat; background-position:10px 10px;
 }
 
 div.note pre,div.tip pre ,div.important pre ,div.caution pre ,div.warning pre{background-color:#333; color:white;}
