tweak html layout
git-svn-id: file:///srv/svn/publican/trunk@352 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-jboss/en-US/css/global.css
+++ b/publican-jboss/en-US/css/global.css
@@ -9,10 +9,6 @@
 body {max-width: 760px;min-width: 72em;margin: 0 auto 10px auto;padding: 0;background: #fff url(../images/bkgrnd_greydots.png) repeat;font-family: "liberation Sans", "Bitstream Vera Sans", "Lucida Grande", "Trebuchet MS", helvetica, verdana, arial, sans-serif;font-size: small;color: #333;}
 
 
-p {line-height: 1.25em;
-
-
-/*	margin-top: 0;*/}
 h1+p,h2+p,h3+p,h4+p {margin-top: .25em;}
 p.footnote {margin-top: 4em;font-size: xx-small;color: black;}
 
@@ -58,7 +54,6 @@ table.docstable tr:hover td a{color:black}
 table.docstable td{ border-bottom:1px solid #efefef; }
 table, td,th{ table-collapse:collapse; border-style:none;  border-collapse:collapse;}
 table.docstable .download a:link,.docstable .download a:visited{color:#ccc;}
-table.docstable td{line-height:16px;}
 
 .pdf, .tarball{display:block; float:left; padding: 0px 4px 0px 18px;height:16px;font-size:x-small;}
 .pdf {background: transparent url(../images/doc.png)top left no-repeat;}
@@ -80,7 +75,7 @@ acronym{border-bottom:none;}
 #navigation ul{clear:both;}
 #navigation ul, #navigation li {list-style:none;margin:0em;padding:0em;display:block;}
 #navigation li {display:inline;}
-#navigation li a{float:left;min-height:24px; line-height:24px;padding:0em 1em;}
+#navigation li a{float:left;min-height:24px; padding:0em 1em;}
 
 #main-navigation #mainLast a{background:#b70000 url(../images/mainlink.png)top right no-repeat;padding-right:2em;}
 #main-navigation #mainFirst a{background:#b70000 url(../images/mainfirst.png)top left no-repeat;padding-left:2em;}
