--- a/publican/content/common/en-US/css/default.css
+++ b/publican/content/common/en-US/css/default.css
@@ -255,7 +255,7 @@ img{margin:0em; pading:0em;display:inline;}
 td{vertical-align:top;}
 
 /*Lists*/
-ol li ,ul li{padding-left:.2em;padding-bottom:.5em;margin:0em;}
+ol li ,ul li{padding-left:.2em;padding-bottom:0.3em;margin:0em;}
 
 ul{padding-left:1.6em;list-style-image:url(../images/dot.png);list-style-type: circle;}
 ul ul{list-style-image:url(../images/dot2.png);list-style-type: circle;}
@@ -428,11 +428,11 @@ span.book{margin-top:4em;display:block;}
 span.chapter{display:block;margin-top:0.5em;}
 
 /*Breadcrumbs*/
-#breadcrumbs ul li.first:before{content:" ";}
+#breadcrumbs ul li.first:before{content: " ";}
 #breadcrumbs{color:#900;padding:3px;margin-bottom:25px;}
 #breadcrumbs ul{margin-left:0;padding-left:0;display:inline;border:none;}
 #breadcrumbs ul li{margin-left:0;padding-left:2px;border:none;list-style:none;display:inline;}
-#breadcrumbs ul li:before{content:"\0020 \0020 \0020 \00BB \0020";color:#333;}
+#breadcrumbs ul li:before{content: "\0020 \0020 \0020 \00BB \0020";color:#333;}
 
 /*status*/
 .alpha1{background: white url(../images/watermark-alpha1.png) top left repeat;}
@@ -449,7 +449,7 @@ span.chapter{display:block;margin-top:0.5em;}
 .glossary dt,.index dt{font-size:.9em;color:#444;padding-top:.5em;}
 .glossary dl dl dt,
 .index dl dl dt{font-size:.85em;color:#777;line-height:1.2em;font-weight:normal;padding-top:0em;}
-.index dl dl dt:before{content:"- ";color:#ccc;}
+.index dl dl dt:before{content: "- ";color:#ccc;}
 
 /*changes*/
 .footnotes{}
