--- a/publican-jboss/en-US/css/default.css
+++ b/publican-jboss/en-US/css/default.css
@@ -4,16 +4,7 @@
 
 @import url("dirty.css");
 
-body{
-	background-color: white;
-	margin:0 auto;
-	font-family: "liberation sans", "Myriad ", "Bitstream Vera Sans","Lucida Grande", verdana, "Luxi Sans","Trebuchet MS", helvetica,verdana,arial,sans-serif;
-	font-size:12px;
-	max-width:55em;
-	padding:0em 2em;
-	color:#333;
-	line-height:150%;
-	}
+
 body.toc_embeded {margin-left: 300px !important;} /*jeff rocks*/
 
 object.toc{ /*for hosting system only*/
@@ -24,21 +15,73 @@ object.toc{ /*for hosting system only*/
 	z-index: 100;
 	border-style:none;
 	border-right:1px solid #999 !important;}
+
+body{
+	background-color: white;
+	margin:0 auto;
+	font-family: "liberation sans", "Myriad ", "Bitstream Vera Sans","Lucida Grande", verdana, "Luxi Sans","Trebuchet MS", helvetica,verdana,arial,sans-serif;
+	font-size:12px;
+	max-width:55em;
+	padding:0em 2em;
+	color:#333;
+	}
+
+/* desktop styles */
+body.desktop .book > .toc {
+	display:block;
+	width:24em;
+	height:99%;
+	position:fixed;
+	overflow:auto;
+	top:0px;
+	left:0px; 
+	padding-left:10px;
+	font-size:0.8em;
+	background-color:#EEEEEE;
+}
+body.desktop {
+	margin-left:24em;
+}
+
+.toc .chapter {
+	margin-top:1em;
+}
+
+a {
+	text-decoration:none;
+	border-bottom: 1px dotted ;
+}
+
+div {
+	padding-top:0px !important;
+}
+
+div.section {
+	padding-top:1em !important;
+}
+
+p {
+	padding-top:0px !important;
+	margin-top:0.3em !important;
+	padding-bottom:0px !important;
+	margin-bottom:1em !important;
+}
+
 /*Links*/
 a:link{color:#0066cc;}
 a:visited{color:#6699cc;}
 div.longdesc-link{float:right;color:#999;}
 
+
 /*headings*/
-h1,h2,h3,h4,h5,h6{color:#a7a700;
-	line-height:130%;
+h1,h2,h3,h4,h5,h6{color:#a70000;
 	margin-top:0em;
+	margin-bottom:0em;
 	font-family:"liberation sans","Bitstream Vera Sans","Lucida Grande","Trebuchet MS",helvetica,verdana,arial,sans-serif;
 	background-color:transparent;
 	}
 
 h1{background: #800 url(../images/h1-bg.png) top left repeat;
-	line-height:1.2em;
 	color:white;
 	font-size:2em;
 	padding:1.5em;
@@ -88,8 +131,8 @@ a.version:visited, a.version:link{color:#666;}
 a.version:focus, a.version:hover{color:black;}
 .books {display:block;position:relative; clear:both; width:100%;  }
 .books li{display:block; width:200px !important; float:left !important;position:relative; clear: none  !important;}
-.books .html{width:170px;display:block;line-height:1.7em;}
-.books .pdf{position:absolute; left:170px;top:0px;font-size:smaller;line-height:2em;}
+.books .html{width:170px;display:block;}
+.books .pdf{position:absolute; left:170px;top:0px;font-size:smaller;}
 .books .pdf:link, .books .pdf:visited{color:#555;}
 .books .pdf:hover, .books .pdf:focus{color:#000;}
 .books li a{text-decoration:none;}
@@ -100,26 +143,100 @@ a.version:focus, a.version:hover{color:black;}
 .products li a{width:300px; padding:.5em 0em;}
 .products ul{clear:both;}
 
-/* desktop styles */
-body.desktop .book > .toc {
+
+/*revision history*/
+.revhistory {
 	display:block;
-	width:24em;
-	height:99%;
-	position:fixed;
+	/*max-height:15em;
 	overflow:auto;
-	top:0px;
-	left:0px; 
-	padding-left:10px;
+	*/}
+
+
+
+.revhistory table{
+	background-color:transparent;
+	color:#ccc;
+	border-color:#fff;
+	padding:0em;
+	margin: 0;
 	font-size:0.8em;
-	background-color:#EEEEEE;
-}
-body.desktop {
-	margin-left:24em;
-}
-.toc dt {
-	line-height:1.2em;
-	margin-bottom:.7em;
-}
+	border-collapse:collapse; border-style:none;}
+
+.revhistory td{
+	text-align:right;
+	padding:0em !important;
+	border-top: 1px solid #fff !important;
+	}
+
+
+.revhistory tr td:first-child{
+	text-align:left;}
+
+.revhistory tr td p{
+	text-align:left;
+	font-weight:bold;
+	color:#666;
+	font-size:1.0em;
+	display:block;
+	margin:0em;
+	padding:0em;
+	padding-bottom:0.7em;
+	border-bottom:1px solid #eee;}
+
+.revhistory table th{
+	background-color:transparent;
+	color:#555;
+	font-size:2em;
+	padding:0em 0em;
+	padding-top:1em;
+	border-bottom:1px solid #eee;}
+
+
+/*credits*/
+.authorgroup div{
+	clear:both}
+h3.author{margin:0em; padding:0em; padding-top:1em;}
+
+
+.authorgroup h4{
+	padding:0em;
+	margin:0em;
+	padding-top:1em;}
+
+
+.author,
+.editor,
+.translator,
+.othercredit{
+	display:block;}
+
+.othercredit h3{
+	padding-top:1em;}
+
+
+div.othercredit{
+	font-size:0.85em;}
+
+.othercredit{
+	margin:0em;
+	padding:0em;
+	}
+
+.releaseinfo{
+	clear: both;}
+
+.editor{
+	font-size:1.05em;}
+
+h4.editedby{
+	font-size:0.85em;
+	color:#666;
+	font-weight:normal}
+
+
+/*copyright release info*/
+.copyright{
+	font-size:.85em;}
 
 /* qanda sets */
 .answer {
