--- a/publican-redhat/en-US/css/docnav.css
+++ b/publican-redhat/en-US/css/docnav.css
@@ -1,5 +1,5 @@
 /*document navigation*/
-.docnav a, .docnav strong{text-decoration:none;font-weight:normal;}
+.docnav a, .docnav strong{border:none;text-decoration:none;font-weight:normal;}
 .docnav{list-style:none;margin:0em;padding:0em;position:relative;width:100%;padding-bottom:2em;padding-top:1em;border-top:1px dotted #ccc;}
 .docnav li{list-style:none;margin:0em;padding:0em;display:inline;font-size:.8em;}
 .docnav li:before{content:" ";}
