--- a/publican-redhat/en-US/css/documentation.css
+++ b/publican-redhat/en-US/css/documentation.css
@@ -2,7 +2,7 @@
 
 
 /*Lists*/
-ol li ,ul li{padding-left:.2em;padding-bottom:.5em;margin:0em;}
+ol li ,ul li{padding-left:.2em;padding-bottom:0.3em;margin:0em;}
 
 ul{padding-left:1.6em;list-style-image:url(../images/dot.png);list-style-type: circle;}
 ul ul{list-style-image:url(../images/dot2.png);list-style-type: circle;}
@@ -23,11 +23,11 @@ img{display:block;margin:2em 0;}
 
 dt a{font-weight: normal;}
 .longdesc-link{display:none;}
+.longdesc{display:none;}
 .prompt{background-color:#ede7c8;padding:0em .3em;}
 
 /*user interface styles*/
 .screen .replaceable {color:#444;}
-.screen{background-color:#eeeeee; color:black; padding:.5em 1em; margin:0em;}
 pre,code,.guibutton,.keycap,.guilabel{font-size:0.9em;font-family:"liberation mono", "Bitstream vera mono",monospace;}
 .guibutton,.keycap,.guilabel{font-weight:bold;white-space:nowrap;color:#444;font-family:"liberation sans", "Bitstream vera sans", "dejavu sans" sans-serif;}
 .guibutton,.guilabel{}
@@ -45,7 +45,16 @@ pre,code,.guibutton,.keycap,.guilabel{font-size:0.9em;font-family:"liberation mo
 	font-family:monospace !important;
 }
 .command .replaceable{color:#555;}
-pre{display:block;background-color:#f7f2d0;color:#333;overflow:auto;}
+pre{
+	display:block;
+	background-color:#eeeeee;
+	color:black;
+	overflow:auto;
+	margin-bottom: 0.3em;
+	padding:.5em 1em;
+	overflow:auto;
+}
+
 code{white-space:nowrap;}
 
 /*Notifications*/
@@ -105,7 +114,7 @@ div.important h2{background-image:url(../images/important.png)}
 */
 /*Page Title*/
 #title strong{display:none;}
-#title a{display:block;height:45px;width:110px;padding-left:200px;background:transparent url(../images/rhlogo.png) top left no-repeat;}
+#title a{border:none; display:block;height:45px;width:110px;padding-left:200px;background:transparent url(../images/rhlogo.png) top left no-repeat;}
 #title{display:block;height:45px;background:transparent url(../images/documentation.png) top right no-repeat;padding-bottom:1em;}
 
 /*Table*/
@@ -164,7 +173,7 @@ span.chapter{display:block;margin-top:0.5em;}
 .indexdiv{margin-bottom:1em;}
 .glossary dt,.index dt{font-size:.9em;color:#444;padding-top:.5em;}
 .glossary dl dl dt,
-.index dl dl dt{font-size:.85em;color:#777;line-height:1.2em;font-weight:normal;padding-top:0em;}
+.index dl dl dt{font-size:.85em;color:#777;font-weight:normal;padding-top:0em;}
 .index dl dl dt:before{content:"- ";color:#ccc;}
 
 /*changes*/
