--- a/publican-redhat/en-US/css/reporting.css
+++ b/publican-redhat/en-US/css/reporting.css
@@ -44,8 +44,8 @@ ul.locale li:hover dt{color:#bfdce8;}
 .results ul.locale li{height:40px;background: white url(../images/48row.png) bottom right repeat-x;position:relative;}
 .results ul.locale div.progress{position:relative;top:13px;left:-143px;}
 .results ul.locale li{padding:0em;padding-left: 153px; }
-.results ul.locale li h3{margin:0em; padding:0em;position:absolute;font-size:1.1em;top:-3px;line-height:32px;}
-h3, h3 a{display:block !important;width:546px; line-height:32px !important;}
+.results ul.locale li h3{margin:0em; padding:0em;position:absolute;font-size:1.1em;top:-3px;}
+h3, h3 a{display:block !important;width:546px; }
 h3 a {margin:0em;padding:0em;height:32px; margin-top:-6px;}
 
 .results ul.locale li:hover{background-position:top left;color:white;background-color:#0093d9;}
