fix saxon errors, fix xml CATALOG
git-svn-id: file:///srv/svn/publican/trunk@354 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-redhat/en-US/css/common.css
+++ b/publican-redhat/en-US/css/common.css
@@ -485,12 +485,11 @@ img {
 	color:#444;
 }
 pre,code,.guibutton,.keycap,.guilabel {
-	font-family:"liberation mono", "Bitstream vera mono",monospace;
+	font-family:"liberation mono", "bitstream vera mono", "dejavu mono", monospace;
 }
 .guibutton,.keycap,.guilabel {
 	font-weight:bold;
 	white-space:nowrap;
-	font-family:"liberation sans", "Bitstream vera sans", "dejavu sans", sans-serif;
 }
 
 .example {
@@ -507,11 +506,11 @@ pre,code,.guibutton,.keycap,.guilabel {
 .citetitle,
 .replaceable,
 .option {
-	font-family:"liberation mono", "Bitstream vera mono",monospace;
+	font-family:"liberation mono", "bitstream vera mono", "dejavu mono", monospace;
 }
 
 pre {
-	font-family:"liberation mono", "bitstream vera mono", "dejavu mono" monospace;
+	font-family:"liberation mono", "bitstream vera mono", "dejavu mono", monospace;
 	display:block;
 	background-color:#eeeeee;
 	overflow:auto;
