fix desktop html toc
git-svn-id: file:///srv/svn/publican/trunk@362 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/content/common/en-US/css/common.css
+++ b/publican/content/common/en-US/css/common.css
@@ -28,7 +28,7 @@ object.toc {
 
 /* desktop styles */
 body.desktop {
-	margin-left:24em;
+	margin-left:25.5em;
 }
 
 body.desktop .book > .toc {
@@ -39,7 +39,7 @@ body.desktop .book > .toc {
 	overflow:auto;
 	top:0px;
 	left:0px;
-	padding-left:10px;
+	padding-left:1em;
 	background-color:#EEEEEE;
 
 }
