--- a/publican-ovirt/en-US/css/overrides.css
+++ b/publican-ovirt/en-US/css/overrides.css
@@ -15,6 +15,15 @@ h1 {
 	color:white;
 }
 
+
+#title a {
+	height:105px;
+}
+
+#title {
+	height:105px;
+}
+
 .example {
 	background-color:#c8c5ac;
 }
@@ -42,6 +51,6 @@ table tr.even td {
 }
 
 .term{
-	color:#a70000
+	color:#5f8c00;
 }
 
