added .toc > line-height property to provide breathing space as per andyfitz's new mantra.
git-svn-id: file:///srv/svn/publican/trunk@365 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/content/common/en-US/css/common.css
+++ b/publican/content/common/en-US/css/common.css
@@ -43,6 +43,11 @@ body.desktop .book > .toc {
 	background-color:#EEEEEE;
 
 }
+
+.toc {
+line-height:13pt;
+}
+
 .toc .chapter {
 	margin-top:1em;
 }
