--- a/publican-jboss/en-US/css/overrides.css
+++ b/publican-jboss/en-US/css/overrides.css
@@ -7,7 +7,7 @@ a:visited {
 }
 
 h2,h3,h4,h5,h6 {
-	color:#a70000;
+	color:#a7a700;
 }
 
 h1 {
@@ -42,6 +42,6 @@ table th {
 }
 
 .term{
-	color:#a70000
+	color:#a7a700;
 }
 
