--- a/publican-jboss/en-US/css/overrides.css
+++ b/publican-jboss/en-US/css/overrides.css
@@ -37,6 +37,10 @@ table th {
 	background-color:#900;
 }
 
+table tr.even td {
+	background-color:#f5f5f5;
+}
+
 #title a {
 	height:54px;
 }
@@ -45,3 +49,6 @@ table th {
 	color:#a7a700;
 }
 
+.revhistory table th {
+	color:#a7a700;
+}
