--- a/publican-redhat/en-US/css/overrides.css
+++ b/publican-redhat/en-US/css/overrides.css
@@ -37,7 +37,14 @@ table th {
 	background-color:#900;
 }
 
+table tr.even td {
+	background-color:#f5f5f5;
+}
+
 .term{
 	color:#a70000
 }
 
+.revhistory table th {
+	color:#a70000;
+}
