--- a/publican/content/common/en-US/css/common.css
+++ b/publican/content/common/en-US/css/common.css
@@ -109,6 +109,13 @@ h2 {
 	font-size:1.6em;
 }
 
+
+h2.subtitle {
+	margin-top: 1em;
+	margin-bottom: 1em;
+	font-size: 4.0em;
+}
+
 h3 {
 	font-size:1.3em;
 	padding-top:0em;
@@ -134,6 +141,11 @@ h5.formalpara {
 	margin-bottom:.8em;
 }
 
+.abstract h6 {
+	margin-top:1em;
+	margin-bottom:.5em;
+	font-size:2em;
+}
 
 /*element rules*/
 hr {
@@ -289,7 +301,6 @@ a.version:focus, a.version:hover {
 
 .revhistory table {
 	background-color:transparent;
-	color:#ccc;
 	border-color:#fff;
 	padding:0em;
 	margin: 0;
@@ -311,7 +322,6 @@ a.version:focus, a.version:hover {
 .revhistory tr td p {
 	text-align:left;
 	font-weight:bold;
-	color:#666;
 	display:block;
 	margin:0em;
 	padding:0em;
@@ -321,10 +331,9 @@ a.version:focus, a.version:hover {
 
 .revhistory table th {
 	background-color:transparent;
-	color:#555;
+	color:#336699;
 	font-size:2em;
-	padding:0em 0em;
-	padding-top:1em;
+	padding: 1em 0em;
 	border-bottom:1px solid #eee;
 }
 
@@ -335,15 +344,15 @@ a.version:focus, a.version:hover {
 }
 
 h3.author {
-	margin:0em;
-	padding:0em;
-	padding-top:1em;
+	margin: 0em;
+	padding: 0em;
+	padding-top: 1em;
 }
 
 .authorgroup h4 {
-	padding:0em;
-	margin:0em;
-	padding-top:1em;
+	padding: 0em;
+	margin: 0em;
+	padding-top: 1em;
 }
 
 .author, 
