--- a/publican/content/common/en-US/css/common.css
+++ b/publican/content/common/en-US/css/common.css
@@ -1,3 +1,6 @@
+body, h1, h2, h3, h4, h5, h6, pre, li {
+	line-height: 1.29em;
+}
 
 body {
 	background-color: white;
@@ -28,7 +31,7 @@ object.toc {
 
 /* desktop styles */
 body.desktop {
-	margin-left:25.5em;
+	margin-left: 30em;
 }
 
 body.desktop .book > .toc {
@@ -112,6 +115,11 @@ h2 {
 h2.subtitle {
 	margin-top: 1em;
 	margin-bottom: 1em;
+	font-size: 2.0em;
+}
+
+.preface > div > div > div > h2.title {
+	margin-top: 1em;
 	font-size: 2.0em;
 }
 
