Set vertical-align:top for TD - BZ #457851
git-svn-id: file:///srv/svn/publican/trunk@388 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/content/common/en-US/css/common.css
+++ b/publican/content/common/en-US/css/common.css
@@ -752,6 +752,7 @@ table th p:first-child, table td p:first-child, table  li p:first-child {
 
 th, td {
 	border-style:none;
+	vertical-align: top;
 }
 
 table table td {
