fix various BZs
git-svn-id: file:///srv/svn/publican/trunk@392 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-redhat/en-US/css/overrides.css
+++ b/publican-redhat/en-US/css/overrides.css
@@ -6,13 +6,21 @@ a:visited {
 
 }
 
-h2,h3,h4,h5,h6 {
+
+h1 {
 	color:#a70000;
 }
 
-h1 {
+h1.title {
 	background: #800 url(../images/h1-bg.png) top left repeat;
-	color:white;
+}
+
+.section h1.title {
+	color:#a70000;
+}
+
+h2,h3,h4,h5,h6 {
+	color:#a70000;
 }
 
 .example {
