fixes for new book info
git-svn-id: file:///srv/svn/publican/trunk@412 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-redhat/en-US/css/overrides.css
+++ b/publican-redhat/en-US/css/overrides.css
@@ -6,13 +6,12 @@ a:visited {
 
 }
 
-
 h1 {
 	color:#a70000;
 }
 
-h1.title {
-	background: #800 url(../images/h1-bg.png) top left repeat;
+.producttitle {
+	background: #a70000 url(../images/h1-bg.png) top left repeat;
 }
 
 .section h1.title {
@@ -25,16 +24,6 @@ h2,h3,h4,h5,h6 {
 
 .example {
 	background-color:#c8c5ac;
-}
-
-/*Notifications*/
-div.note, div.tip, div.important ,div.caution ,div.warning {
-	background-color: #404040;
-	color:white;
-}
-
-div.note h2, div.tip h2, div.important h2, div.caution h2, div.warning h2 {
-	color:white;
 }
 
 table {
