more updates for new book_info layout
git-svn-id: file:///srv/svn/publican/trunk@413 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-fedora/en-US/css/overrides.css
+++ b/publican-fedora/en-US/css/overrides.css
@@ -10,13 +10,22 @@ a:visited {
 	color:#6699cc;
 }
 
-h2,h3,h4,h5,h6 {
-	color:#003d6e;
-}
 
 h1 {
-	background: #0093d9 url(../images/h1-bg.png) top left repeat;
-	color:white;
+	color:#3c6eb4
+}
+
+.producttitle {
+	background: #3c6eb4 url(../images/h1-bg.png) top left repeat;
+}
+
+.section h1.title {
+	color:#3c6eb4;
+}
+
+
+h2,h3,h4,h5,h6 {
+	color:#3c6eb4;
 }
 
 .example {
@@ -24,11 +33,11 @@ h1 {
 }
 
 table {
-	border:1px solid #0093d9;
+	border:1px solid #3c6eb4;
 }
 
 table th {
-	background-color:#0093d9;
+	background-color:#3c6eb4;
 }
 
 
@@ -37,9 +46,9 @@ table tr.even td {
 }
 
 .term{
-	color:#003d6e
+	color:#3c6eb4
 }
 
 .revhistory table th {
-	color:#003d6e;
+	color:#3c6eb4;
 }
