--- a/publican-jboss/en-US/css/overrides.css
+++ b/publican-jboss/en-US/css/overrides.css
@@ -6,13 +6,21 @@ a:visited {
 	color:#6699cc;
 }
 
-h2,h3,h4,h5,h6 {
-	color:#a7a700;
+h1 {
+	color:#a70000;
 }
 
-h1 {
+.producttitle {
 	background: #800 url(../images/h1-bg.png) top left repeat;
-	color:white;
+}
+
+.section h1.title {
+	color:#a70000;
+}
+
+
+h2,h3,h4,h5,h6 {
+	color:#a70000;
 }
 
 .example {
@@ -36,9 +44,9 @@ table tr.even td {
 }
 
 .term{
-	color:#a7a700;
+	color:#a70000;
 }
 
 .revhistory table th {
-	color:#a7a700;
+	color:#a70000;
 }
