--- a/publican-ovirt/en-US/css/overrides.css
+++ b/publican-ovirt/en-US/css/overrides.css
@@ -6,13 +6,21 @@ a:visited {
 	color:#5f8c00;
 }
 
-h2,h3,h4,h5,h6 {
+h1 {
 	color:#5f8c00;
 }
 
-h1 {
+.producttitle {
 	background: #5f8c00 url(../images/h1-bg.png) top left repeat;
-	color:white;
+}
+
+.section h1.title {
+	color:#5f8c00;
+}
+
+
+h2,h3,h4,h5,h6 {
+	color:#5f8c00;
 }
 
 
