--- a/publican/content/common/en-US/css/common.css
+++ b/publican/content/common/en-US/css/common.css
@@ -31,7 +31,7 @@ object.toc {
 
 /* desktop styles */
 body.desktop {
-	margin-left: 30em;
+	margin-left: 24em;
 }
 
 body.desktop .book > .toc {
@@ -44,7 +44,7 @@ body.desktop .book > .toc {
 	left:0px;
 	padding-left:1em;
 	background-color:#EEEEEE;
-
+	font-size: 0.8em;
 }
 
 .toc {
