make layout match new conventions
git-svn-id: file:///srv/svn/publican/trunk@427 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/content/common/en-US/css/common.css
+++ b/publican/content/common/en-US/css/common.css
@@ -595,13 +595,21 @@ pre, code, .guibutton, .keycap, .guilabel {
 
 
 /*terminal/console text*/
-.command, 
 .computeroutput, 
-.filename, 
 .citetitle, 
 .replaceable, 
 .option {
 	font-family:"liberation mono", "bitstream vera mono", "dejavu mono", monospace;
+}
+
+.replaceable {
+	font-family:"liberation mono", "bitstream vera mono", "dejavu mono", monospace;
+	font-style: italic;
+}
+
+.command, .filename, .keycap, .classname, .literal {
+	font-family:"liberation mono", "bitstream vera mono", "dejavu mono", monospace;
+	font-weight:bold;
 }
 
 pre {
